<resources>
    <string name="app_name">NS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nsbot">NSBOT</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_out">Log Out</string>
    <string name="support">Support</string>
    <string name="notice">Notice : for faster testing purpose , I added a code to make auto sign out after only 3 seconds in case the user is inactive .</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Are you sure you want to sign out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_location">Location</string>
    <string name="home">Home</string>
    <string name="latitude">Latitude:</string>
    <string name="change_mode">Change Mode</string>
    <string name="can_not_undo">WARNING ! \nThis action can not be undo</string>
    <string name="delete_account_confirmation">Delete your account ?</string>
    <string name="longitude">Longitude:</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_change">Confirm Change</string>
    <string name="delete_account">Delete Account</string>
</resources>