<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Img_change_password"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/change_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="@+id/Img_change_password"
            app:layout_constraintStart_toEndOf="@+id/Img_change_password"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_password_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/current_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_change_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_password_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_textInputLayout_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/confirm_change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_textInputLayout_setting" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="8dp"
            android:background="?attr/dividerHorizontal"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_confirm_change" />

        <ImageView
            android:id="@+id/img_delete_account"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/delete_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/delete_account"
            app:layout_constraintBottom_toBottomOf="@+id/img_delete_account"
            app:layout_constraintStart_toEndOf="@+id/img_delete_account"
            app:layout_constraintTop_toTopOf="@+id/img_delete_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>